# cityflow-iwisum-project

./: .gitignore  README.md  config.py  main.py  pyproject.toml  show_results.ipynb
cityflow-config/: config.json
cityflow-config/samples/1x1/: flow.json  roadnet.json
cityflow-config/samples/3x4/: flow.json  roadnet.json
environment/: cityflow_env.py
models/: intersection.py  lane.py  lane_link.py  light_phase.py  road.py  road_link.py  roadnet.py  traffic_light.py
models/extended_models/: intersection_extended.py  lane_extended.py  road_extended.py
output/: ga_results_01_22_21_47_45.hdf5  ga_results_01_23_19_08_22.hdf5  ga_results_01_23_22_17_00.hdf5  ga_results_01_23_22_17_44.hdf5  ga_results_01_23_22_25_10.hdf5  ga_results_01_24_07_08_47.hdf5
q-learning/: q-learner.py
q_learning/: genetic_optimiser.py  odd_learner.py  q_learner.py  random_learner.py
sarsa/: sarsa_learner.py
