[tool.poetry]
name = "cityflow-iwisum-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
numpy = "^1.26.3"
matplotlib = "^3.8.2"
ruff = "^0.1.11"
tqdm = "^4.66.1"
pandas = "^2.2.0"
pygad = "^3.2.0"
tables = "^3.9.2"
ipykernel = "^6.29.0"
ptyprocess = "^0.7.0"
pyarrow = "^15.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
